start with search page

--- a/Frontend/src/assets/cmps/header.scss
+++ b/Frontend/src/assets/cmps/header.scss
@@ -2,7 +2,7 @@
   box-shadow: rgba(9, 30, 66, 0.15) 0px 0.1rem 0.1rem 0px;
   .header-main {
     margin: 0 auto;
-    max-width: 1320px;
+    max-width: 1060px;
     min-width: 480px;
     display: flex;
     justify-content: space-between;
@@ -12,16 +12,17 @@
       gap: 5px;
       margin: 10px 20px;
       text-decoration: none;
-      color: #006fff;
+      color: var(--ds-text);
     }
     .navigation {
       align-self: center;
+      margin-right: 20px;
       .list {
         display: flex;
         gap: 20px;
         a{
           text-decoration: none;
-          color: #006fff;
+          color: var(--ds-text);
         }
       }
     }
