--- a/Angular Frontend/src/app/header/header.component.html
+++ b/Angular Frontend/src/app/header/header.component.html
@@ -1,9 +1,8 @@
 <section class="header">
   <main class="header-main">
     <a routerLink="" class="logo">
-      <span>
-        <svg-icon src="img/logo.svg"></svg-icon>
-      </span>
+      <!-- <svg-icon src="img/logo.svg"></svg-icon> -->
+      <mat-icon svgIcon="logo" />
       <h1>MyBook</h1>
     </a>
     <nav class="navigation">
