finnaly finished with refactoring services from React

--- a/Angular Frontend/src/app/pages/search-page/search-page.component.html
+++ b/Angular Frontend/src/app/pages/search-page/search-page.component.html
@@ -8,6 +8,9 @@
       </form>
     </header> -->
   <main>
-    <pagination />
+    <ul>
+      <li *ngFor="let book of viewBooks">{{ book | json }}</li>
+    </ul>
+    <pagination [totalItems]="totalItems" [onSetPage]="setPage" />
   </main>
 </section>
