books cmp place

--- a/Angular Frontend/src/app/pages/search-page/search-page.component.html
+++ b/Angular Frontend/src/app/pages/search-page/search-page.component.html
@@ -8,9 +8,7 @@
       </form>
     </header> -->
   <main>
-    <ul>
-      <li *ngFor="let book of viewBooks">{{ book | json }}</li>
-    </ul>
+  <books [books]="viewBooks"/>
     <pagination [totalItems]="totalItems" [onSetPage]="setPage" />
   </main>
 </section>
