--- a/Angular Frontend/src/app/pagination/pagination.component.scss
+++ b/Angular Frontend/src/app/pagination/pagination.component.scss
@@ -1,6 +1,7 @@
-:host{
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    transform: translateX(-50%);
+:host {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: 500px;
 }
