--- a/Angular Frontend/src/app/pages/auth/confirm-email/confirm-email.component.html
+++ b/Angular Frontend/src/app/pages/auth/confirm-email/confirm-email.component.html
@@ -1,1 +1,34 @@
-<p>confirm-email works!</p>
+<section class="confirm-main">
+  <section class="left-bg">
+    <div class="text">
+      <h1>Create your free account</h1>
+      <p>A thousand books are waiting for you</p>
+    </div>
+  </section>
+  <section class="confirm-section">
+    <h1>Confirm Email</h1>
+    <form>
+      <section class="email-info">
+        <p>
+          We sent a code to <strong>email</strong>. Please check your email.
+        </p>
+        <div class="resend">
+          <p>Didn't get a code?</p>
+          <button type="button">Send Again</button>
+        </div>
+      </section>
+      <label>
+        <p>Code</p>
+        <input
+          type="text"
+          placeholder="Enter the code"
+          required
+        />
+      </label>
+      <button type="submit">Confirm</button>
+      <div class="back">
+        <a routerLink="/signup">Back</a>
+      </div>
+    </form>
+  </section>
+</section>
