--- a/Angular Frontend/src/app/pages/auth/sing-up-page/sing-up-page.component.scss
+++ b/Angular Frontend/src/app/pages/auth/sing-up-page/sing-up-page.component.scss
@@ -38,10 +38,11 @@
       gap: 10px;
       line-height: 1.5;
     }
-    main{
-        display: grid;
-        place-content: center;
-        flex-grow: 1
+    main {
+      display: grid;
+      place-content: center;
+      flex-grow: 1;
+     
     }
   }
 }
