work on reset paswword for verified users

--- a/Angular Frontend/src/app/pages/auth/login-page/login-page.component.html
+++ b/Angular Frontend/src/app/pages/auth/login-page/login-page.component.html
@@ -21,6 +21,8 @@
       </p>
     </div>
     <button>Submit</button>
+    <p>Forgot your password?</p>
+    <a routerLink="/resetPassword">Reset password</a>
     <section>
       <p>New to MyBooks?</p>
       <a routerLink="/signup">Create an account</a>
