work on reset pass form

--- a/Angular Frontend/src/app/pages/auth/reset-pass-page/reset-pass-page.component.html
+++ b/Angular Frontend/src/app/pages/auth/reset-pass-page/reset-pass-page.component.html
@@ -1,28 +1,1 @@
-<section>
-    <form
-      [formGroup]="resetFrom"
-      (ngSubmit)="onSubmit()"
-      *ngIf="!sended; else success"
-    >
-      <h1>Reset Your Password!</h1>
-      <p>Please type your email, and we will send you a code to reset your password.</p>
-  
-      <label>
-        <p>Email:</p>
-        <input formControlName="email" />
-        <button type="submit">Submit</button>
-  
-        <p *ngIf="isErr && resetFrom.controls['email'].dirty">
-          {{ resetFrom.value.email ? 'This email is incorrect or not verified.' : 'Email can\'t be empty.' }}
-        </p>
-      </label>
-    </form>
-  
-    <ng-template #success>
-      <h1>Success!</h1>
-      <p>
-        We sent a confirmation message to {{ resetFrom.value.email }}. Please check your inbox.
-      </p>
-    </ng-template>
-  </section>
-  
+<p>reset-pass-page works!</p>
