--- a/Angular Frontend/src/app/pages/profile-page/profile-page.component.html
+++ b/Angular Frontend/src/app/pages/profile-page/profile-page.component.html
@@ -1,1 +1,20 @@
-<p>profile-page works!</p>
+<section class="profile">
+  <header class="details">
+    <label class="img-cover">
+      <input type="file" style="display: none" (change)="onSubmit($event)" />
+      <div
+        [ngStyle]="{
+          'background-image': user?.imgUrl
+            ? user?.imgUrl
+            : 'url(../../../assets/avatar.jpg)'
+        }"
+        class="img"
+      ></div>
+    </label>
+    <div>
+      <h3>{{ user?.fullName }}</h3>
+      <p>{{ user?.email }}</p>
+    </div>
+  </header>
+  <main></main>
+</section>
