now user can add photo

--- a/Angular Frontend/src/app/pages/profile-page/profile-page.component.html
+++ b/Angular Frontend/src/app/pages/profile-page/profile-page.component.html
@@ -5,7 +5,7 @@
       <div
         [ngStyle]="{
           'background-image': user?.imgUrl
-            ? user?.imgUrl
+            ? 'url(' + user?.imgUrl + ')'
             : 'url(../../../assets/avatar.jpg)'
         }"
         class="img"
