now we see favorite books of user

--- a/Angular Frontend/src/app/pages/profile-page/profile-page.component.html
+++ b/Angular Frontend/src/app/pages/profile-page/profile-page.component.html
@@ -16,5 +16,13 @@
       <p>{{ user?.email }}</p>
     </div>
   </header>
-  <main></main>
+  <main class="favorite-books">
+    <search-panel [onSetFilter]="onSearch" />
+    <books [books]="favBooksInfo.books" />
+    <pagination
+      [totalItems]="favBooksInfo.results"
+      [itemsPerPage]="5"
+      [onSetPage]="onSetPage"
+    />
+  </main>
 </section>
