--- a/Angular Frontend/src/app/pages/profile-page/profile-page.component.scss
+++ b/Angular Frontend/src/app/pages/profile-page/profile-page.component.scss
@@ -12,4 +12,11 @@
       }
     }
   }
+  .favorite-books {
+    ::ng-deep .books {
+      .list {
+        grid-template-columns: repeat(5, minmax(100px, 150px)) !important;
+      }
+    }
+  }
 }
