modify component to controll items perPage

--- a/Angular Frontend/src/app/pagination/pagination.component.html
+++ b/Angular Frontend/src/app/pagination/pagination.component.html
@@ -4,7 +4,11 @@
       *ngFor="
         let item of [1]
           | paginate
-            : { itemsPerPage: 8, totalItems: totalItems, currentPage: page }
+            : {
+                itemsPerPage: itemsPerPage,
+                totalItems: totalItems,
+                currentPage: page
+              }
       "
     ></li>
   </ul>
