loading page and service setup

--- a/Angular Frontend/src/app/app-root/app.component.html
+++ b/Angular Frontend/src/app/app-root/app.component.html
@@ -1,4 +1,4 @@
-<section class="main-app">
-  <app-header *ngIf="showHeader"/>
-  <main><router-outlet /></main>
+<section class="app">
+  <app-header *ngIf="showHeader" />
+  <main class="main-app"><router-outlet /></main>
 </section>
