--- a/Angular Frontend/src/styles.scss
+++ b/Angular Frontend/src/styles.scss
@@ -113,7 +113,10 @@ input {
 :root {
   --background-color: #4d9aff;
 }
-
+a{
+  text-decoration: none;
+  color: #0062e2;
+}
 .alert {
   color: red;
   font-size: 0.875rem;
