--- a/Angular Frontend/src/app/pages/auth/sing-up-page/sing-up-page.component.scss
+++ b/Angular Frontend/src/app/pages/auth/sing-up-page/sing-up-page.component.scss
@@ -1,4 +1,4 @@
-.signup-main {
+.signup {
   display: flex;
   .left-bg {
     width: 50vw;
@@ -8,19 +8,25 @@
     background-size: cover;
     text-align: left;
     color: white;
-    .text {
-      display: flex;
-      flex-direction: column;
-      margin: 0 auto;
-      max-width: max-content;
-      h1 {
-        margin-top: 35vh;
-        font-size: 2rem;
-        text-shadow: 1px 1px 1px black;
-      }
-      p {
-        font-size: 1.125rem;
-        text-shadow: 1px 1px 1px black;
+    .blur {
+      width: 100%;
+      height: 100%;
+      padding-top: 35vh;
+      backdrop-filter: blur(3px);
+      .text {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        max-width: max-content;
+        padding: 10px 20px;
+        h1 {
+          font-size: 2rem;
+          text-shadow: 1px 1px 1px black;
+        }
+        p {
+          font-size: 1.125rem;
+          text-shadow: 1px 1px 1px black;
+        }
       }
     }
   }
@@ -29,7 +35,7 @@
     flex-direction: column;
     min-width: 50vw;
     height: 100vh;
-    header {
+    .signup-header {
       padding: 10px 10px 0 0;
       display: flex;
       justify-content: end;
@@ -38,11 +44,59 @@
       gap: 10px;
       line-height: 1.5;
     }
-    main {
-      display: grid;
-      place-content: center;
-      flex-grow: 1;
-     
+    .signup-main {
+      display: flex;
+      justify-content: center;
+      height: 100%;
+      .cover {
+        width: 100%;
+        margin: 42px;
+        padding: 24px;
+        .label {
+          font-size: 25px;
+          font-weight: 600;
+          line-height: 30px;
+          margin-bottom: 24px;
+        }
+        form {
+          .inputs {
+            label {
+              input {
+                border-color: darkgrey;
+                margin-top: 4px;
+                margin-bottom: 16px;
+                width: 100%;
+                &:focus {
+                  border-color: var(--outline-focus);
+                  outline-color: var(--outline-focus);
+                }
+              }
+              input:has(+ p) {
+                margin-bottom: 6px;
+              }
+              input + p {
+                margin-bottom: 6px;
+              }
+            }
+          }
+          .btn {
+            cursor: pointer;
+            width: 100%;
+            margin-top: 16px;
+            border: none;
+            background-color: rgb(53, 53, 54);
+            height: 48px;
+            border-radius: 6px;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 23px;
+            color: whitesmoke;
+            &:hover {
+              background-color: rgb(60, 60, 63);
+            }
+          }
+        }
+      }
     }
   }
 }
