some style changes

--- a/Angular Frontend/src/styles.scss
+++ b/Angular Frontend/src/styles.scss
@@ -101,7 +101,7 @@ table {
   border-spacing: 0;
 }
 
-input {
+.input {
   line-height: 20px;
   padding: 5px 12px;
   border: 1px solid rgb(46, 51, 58);
