--- a/Angular Frontend/src/app/pages/auth/login-page/login-page.component.html
+++ b/Angular Frontend/src/app/pages/auth/login-page/login-page.component.html
@@ -10,7 +10,7 @@
       <section class="sign-in">
         <div>
           <p class="label">Email:</p>
-          <input formControlName="email" type="email" required />
+          <input formControlName="email" type="email" required class="input" placeholder="Email"/>
           <p *ngIf="!loginForm.value.email && loginForm.invalid && isErr">
             Please enter a valid email.
           </p>
@@ -20,7 +20,7 @@
             <p>Password:</p>
             <a routerLink="/resetPassword">Forgot password?</a>
           </div>
-          <input formControlName="password" required type="password" />
+          <input formControlName="password" required type="password" class="input" placeholder="Password"/>
           <p *ngIf="!loginForm.value.password && loginForm.invalid && isErr">
             Password is required.
           </p>
