--- a/Angular Frontend/src/app/cmps/books-components/book-preview/book-preview.component.html
+++ b/Angular Frontend/src/app/cmps/books-components/book-preview/book-preview.component.html
@@ -1,5 +1,5 @@
 <section class="book-preview">
-  <a [routerLink]="['/book', book.id]">
+  <a [routerLink]="['/book', book.id]" class="book-link">
     <div class="img-place-holder">
       <img class="image" [src]="book.cover" />
     </div>
