--- a/Angular Frontend/src/app/cmps/books-components/book-preview/book-preview.component.scss
+++ b/Angular Frontend/src/app/cmps/books-components/book-preview/book-preview.component.scss
@@ -1,26 +1,33 @@
 .book-preview {
   max-width: 200px;
   min-width: 100px;
-//   text-align: center;
-margin-left: 10px;
-a{
+  //   text-align: center;
+  margin-left: 10px;
+
+  .book-link {
     text-decoration: none;
     .img-place-holder {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100px;
-        height: 210px;
-        max-height: 210px;
-        .image {
-            max-width: 150px;
-            max-height: 100%;
-            min-width: 100px;
-        }
+      box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+        rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+        rgba(255, 255, 255, 0.199) 0px 1px 0px inset;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100px;
+      height: 210px;
+      max-height: 210px;
+      .image {
+        max-width: 150px;
+        max-height: 100%;
+        min-width: 100px;
+      }
     }
-    p{
-        color: gray;
-        font-size: 10px;
+    .title {
+      margin: 10px 0 5px 0;
     }
-}
+    p {
+      color: gray;
+      font-size: 10px;
+    }
+  }
 }
