--- a/Angular Frontend/src/app/pages/auth/confirm-email/confirm-email.component.scss
+++ b/Angular Frontend/src/app/pages/auth/confirm-email/confirm-email.component.scss
@@ -25,9 +25,70 @@
     }
   }
   .confirm-section {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    place-content: center;
     width: 50vw;
     height: 100vh;
+    .title {
+      font-size: 2rem;
+      font-weight: 600;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .txt {
+      margin-bottom: 5px;
+    }
+    .resend {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+      margin-bottom: 10px;
+      .btn {
+        cursor: pointer;
+        padding: 5px 10px;
+        border: none;
+        color: whitesmoke;
+        background-color: rgb(18, 56, 112);
+        border-radius: 6px;
+        &:hover {
+          background-color: rgb(25, 69, 136);
+        }
+      }
+    }
+    .code-submit {
+      display: flex;
+      align-items: end;
+      .input-holder {
+        margin-bottom: 10px;
+        .label {
+          font-size: 1.125rem;
+          margin-bottom: 5px;
+        }
+      }
+      .btns {
+        display: flex;
+        padding: 10px;
+        gap: 10px;
+        margin-bottom: 2px;
+        align-items: center;
+        .confirm {
+          padding: 5px 10px;
+          border: none;
+          background-color: rgb(19, 102, 19);
+          border-radius: 6px;
+          color: whitesmoke;
+          font-size: 1rem;
+          font-weight: 500;
+          &:hover {
+            background-color: rgb(22, 128, 22);
+          }
+        }
+        .back{
+          &:hover{
+            text-decoration: underline;
+          }
+        }
+      }
+    }
   }
 }
